# LAMMPS-TetMSM

./: README.md
fenicsx/: compress_cube_clamped.py  fem-comp-nu-0.450.data  viz.ovito
fenicsx/compare-nodal-positions/: analysis.py
gmsh/: Yan-beam-N4.msh  beam-10x1x1-N4.msh  beam-10x1x1-N8.msh  beam-N8.msh  cube-N16.msh  cube-N2.msh  cube-N4.msh  cube-N8.msh  gmsh_Yan_beam.py  gmsh_beam.py  gmsh_beam_10x1x1.py  gmsh_cube.py  gmsh_reg_cube.py  reg-cube-N16.msh  reg-cube-N2.msh  reg-cube-N4.msh  reg-cube-N8.msh
lammps/: improper_tetmsm.cpp
lammps-src/nodal/: bond_tetmsm.cpp  bond_tetmsm.rst  fix_tetmsm_comm.cpp  fix_tetmsm_comm.h  improper_tetmsm.cpp  improper_tetmsm.h  improper_tetmsm.rst
lammps-src/volume/: bond_tetmsm.cpp  improper_tetmsm.cpp  improper_tetmsm.rst
magnetic-beam/: Mz-deflection-LSM.txt  Mz-deflection-fenicsx-PK2.txt  Yan-N4-Mz-deflection.txt  Yan-beam-N4-Mx.lam  Yan-beam-N4-Mz.lam  Yan_beam.py  plot-Fig8.py  scipy_solve.py
magnetic-beam/dump/: Yan-N4-Mz-deflection.txt  Yan-N4-Mz-state.npz  gravity.dump  lambda-0.01.dump  lambda-0.10.dump  lambda-0.20.dump  lambda-0.50.dump  lambda-0.75.dump  lambda-1.00.dump  lambda-10.00.dump  lambda-100.00.dump  (+16 more)
python-write-lam/: beam.py  cube.py  pyproject.toml
python-write-lam/lam/: beam-N4.lam  viz-beam.ovito  viz-cube.ovito
python-write-lam/msh/: beam-N4.msh  cube-N16.msh  cube-N2.msh  cube-N32.msh  cube-N4.msh  cube-N8.msh  cube.geo
python-write-lam/tetmsm/: __init__.py  geometry.py  model.py  writer.py
source/: bond_tetmsm.h
volume/: README.md  bond_tetmsm.rst  improper_tetmsm.h
(+57 files in other folders)
